# AndroidSamples

001_CameraSample/: .gitignore
001_CameraSample/app/: build.gradle
001_CameraSample/gradle/wrapper/: gradle-wrapper.properties
002_CameraGLSample/: README.md  build.gradle
002_CameraGLSample/app/: build.gradle
002_CameraGLSample/gradle/wrapper/: gradle-wrapper.properties
003_LocalNotificationSample/app/: build.gradle
003_LocalNotificationSample/gradle/wrapper/: gradle-wrapper.properties
004_TcpClient/: build.gradle
004_TcpClient/app/: build.gradle
004_TcpClient/gradle/wrapper/: gradle-wrapper.properties
005_JetPack/: build.gradle  gradle.properties
005_JetPack/app/: build.gradle
005_JetPack/gradle/wrapper/: gradle-wrapper.properties
006_NavigationView/: build.gradle  settings.gradle
006_NavigationView/app/: build.gradle
007_JNI_CPP/: build.gradle  settings.gradle
007_JNI_CPP/app/: build.gradle
007_JNI_CPP/native/: CMakeLists.txt  build.gradle
007_JNI_CPP/native/src/main/: AndroidManifest.xml
007_JNI_CPP/native/src/main/cpp/: native.cpp
007_JNI_CPP/native/src/main/java/com/ragingo/jni/: functions.kt
007_JNI_CPP/native/src/main/res/values/: strings.xml
008_JNI_Rust/: build.gradle  settings.gradle
008_JNI_Rust/app/: build.gradle
008_JNI_Rust/rust/: Cargo.toml
008_JNI_Rust/rust/src/: lib.rs
009_KotlinBuildScript/: build.gradle.kts  settings.gradle.kts
009_KotlinBuildScript/app/: build.gradle  build.gradle.kts
010_GoogleMap/: settings.gradle
010_GoogleMap/app/: build.gradle
(+83 files in other folders)
