[package]
name = "rust"
version = "0.1.0"
authors = ["ragingo <save.the.world.crush@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.16.0"

[lib]
crate_type = ["staticlib", "dylib"]
name = "rust"
